[Bug fix] Popup don't align center

--- a/app/assets/stylesheets/scss/dialog.css.scss
+++ b/app/assets/stylesheets/scss/dialog.css.scss
@@ -23,7 +23,7 @@ $mask-color: #DADADA;
   padding: 10px;
   
   .title {  
-    font-size: 18px;
+    font-size: 16.5px;
     font-weight: bold;
     padding-bottom: 2px;
     &.non-text {
@@ -37,7 +37,7 @@ $mask-color: #DADADA;
     min-width: 200px;
     min-height: 80px;
     background-color: #FFFFFF;
-    border: 1px solid #DDDDDD;
+//    border: 1px solid #DDDDDD;
   }
   
   .buttons{
